--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,11 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name ="trending">Trending fragment</string>
+    <string name="trending">Trending fragment</string>
     <string name="search_title">search</string>
     <string name="search_hint">type..</string>
+    <string name="title_activity_add_group">AddGroupActivity</string>
+    <string name="home">Home</string>
+    <string name="trending_string">Trending</string>
+    <string name="categories">Categories</string>
 </resources>
